--- a/index.html
+++ b/index.html
@@ -133,11 +133,6 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#advantages"  style="color: #d557cc !important;">
-            Почему мы
-          </a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="#testimonials"  style="color: #d557cc !important;">
             Отзывы
           </a>
@@ -161,7 +156,7 @@
     <div class="container">
       <div class="row d-flex justify-content-center">
         <br>
-        <div class="col-12 col-xl-8 text-center" data-aos="fade-down">
+        <div class="col-12 col-xl-8 text-center">
           <h3 class="fw-bold display-10">Разговорный клуб по английскому</h3>
           <h3 class="fw-bold display-10">на темы психологии и саморазвития</h3>
           <h2 class="fw-bold display-4">SPEAK.ENG THERAPY</h2>
@@ -187,27 +182,27 @@
         <div class="col-lg-6">
           <div class="row gx-5 d-flex">
             <div class="col-md-11">
-              <div class="shadow ratio ratio-1x1 rounded bg-cover bp-center align-self-end" data-aos="fade-right" style="background-image: url(img/new_photos/mem.png);--bs-aspect-ratio: 55%;">
+              <div class="shadow ratio ratio-1x1 rounded bg-cover bp-center align-self-end" style="background-image: url(img/new_photos/mem.png);--bs-aspect-ratio: 55%;">
               </div>
             </div>
             <div class="col-md-5 offset-md-1">
-              <div class="shadow ratio ratio-1x1 rounded bg-cover mt-5 bp-center float-end" data-aos="fade-up" style="background-image: url(img/new_photos/ksusha2.jpg);">
+              <div class="shadow ratio ratio-1x1 rounded bg-cover mt-5 bp-center float-end" style="background-image: url(img/new_photos/ksusha2.jpg);">
               </div>
             </div>
             <div class="col-md-6">
-              <div class="col-12 shadow ratio rounded bg-cover mt-5 bp-center" data-aos="fade-left" style="background-image: url(img/new_photos/call.JPG);--bs-aspect-ratio: 100%;">
+              <div class="col-12 shadow ratio rounded bg-cover mt-5 bp-center" style="background-image: url(img/new_photos/call.JPG);--bs-aspect-ratio: 100%;">
               </div>
             </div>
           </div>
         </div>
         <div class="col-lg-6">
-          <h4 class="py-4 border-dark" data-aos="fade-left" style="padding-bottom: 0 !important">
+          <h4 class="py-4 border-dark" style="padding-bottom: 0 !important">
             Боишься неправильно сказать? <br>Выглядеть глупо? Затупить и долго молчать?<br>Хочешь использовать умную лексику?
           </h4>
-          <h4 class="py-4 border-dark" data-aos="fade-left" style="padding-top: 10px !important; padding-bottom: 10px !important">
+          <h4 class="py-4 border-dark" dstyle="padding-top: 10px !important; padding-bottom: 10px !important">
             В разговорном клубе мы говорим Goodbye страхам и Hello — новому уровню!
           </h4>
-          <p data-aos="fade-left" data-aos-delay="200" style="font-size: 19px !important; padding-bottom: 10px !important">
+          <p style="font-size: 19px !important; padding-bottom: 10px !important">
             Я — Ксюша Alive, коуч и преподавательница английского с опытом 7+ лет.
             Изучаю язык уже больше 18 лет, обучаюсь у коллег и работаю со студентами всех уровней.
             <br>
@@ -215,11 +210,11 @@
             благодаря которой мы растем.
           </p>
           <div class="col">
-            <p data-aos="fade-left" data-aos-delay="200" style="font-size: 19px !important;">
+            <p style="font-size: 19px !important;">
               Переходи на канал, чтобы познакомиться со мной поближе:
             </p>
           </div>
-          <div class="col" data-aos="fade-left" data-aos-delay="200">
+          <div class="col" >
             <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="#d557cc" class="bi bi-telegram" viewBox="0 0 16 16">
               <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.287 5.906q-1.168.486-4.666 2.01-.567.225-.595.442c-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294q.39.01.868-.32 3.269-2.206 3.374-2.23c.05-.012.12-.026.166.016s.042.12.037.141c-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8 8 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629q.14.092.27.187c.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.4 1.4 0 0 0-.013-.315.34.34 0 0 0-.114-.217.53.53 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09"/>
             </svg>
@@ -227,7 +222,7 @@
               ksush_a_live
             </a>
           </div>
-          <div class="text-center d-flex justify-content-center" data-aos="fade-left" data-aos-delay="200" style="padding-top: 40px !important;">
+          <div class="text-center d-flex justify-content-center" style="padding-top: 40px !important;">
             <a href="#tarifs" class="btn btn-primary px-5 py-3 shadow me-1 button-color">К тарифам</a>
           </div>
         </div>
@@ -236,7 +231,7 @@
   </div>
   <div class="container" id="advantages">
     <div class="row py-vh-2">
-      <div class="col-md-6 col-lg-3 border-end" data-aos="fade-up">
+      <div class="col-md-6 col-lg-3 border-end" >
         <div class="d-flex">
           <div class="col-md-3 flex-fill pt-3 pe-3 pe-md-0">
             <img width="50" height="50" src="/img/icons/friends.png" alt="friends"/>
@@ -250,7 +245,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6 col-lg-3 border-end" data-aos="fade-up" data-aos-delay="200">
+      <div class="col-md-6 col-lg-3 border-end" >
         <div class="d-flex">
           <div class="col-md-3 flex-fill pt-3 pt-3 pe-3 pe-md-0">
             <img width="50" height="50" src="/img/icons/hands.png" alt="handshake-heart"/>
@@ -264,7 +259,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6 col-lg-3 border-end" data-aos="fade-up" data-aos-delay="400">
+      <div class="col-md-6 col-lg-3 border-end">
         <div class="d-flex">
           <div class="col-md-3 flex-fill pt-3 pt-3 pe-3 pe-md-0">
             <img width="50" height="50" src="/img/icons/brain.png" alt="critical-thinking--v1"/>
@@ -278,7 +273,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="400">
+      <div class="col-md-6 col-lg-3">
         <div class="d-flex">
           <div class="col-md-3 flex-fill pt-3 pt-3 pe-3 pe-md-0">
             <img width="50" height="50" src="/img/icons/talking.png" alt="hundred-points"/>
@@ -297,7 +292,7 @@
   <div class="container" id="info">
     <div class="row py-vh-1">
       <div class="row d-flex justify-content-start justify-content-xs-center">
-        <div class="col-lg-8" data-aos="fade-right">
+        <div class="col-lg-8">
           <h4>
             SPEAK.ENG THERAPY — это пространство, где
             мы лучше узнаем себя и мир вокруг, поднимая важные темы.
@@ -307,26 +302,26 @@
         </div>
       </div>
       <div class="row d-flex align-items-center">
-        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
+        <div class="col-md-6 col-lg-4">
           <span class="h5 fw-lighter">01.</span>
           <p class="py-md-5 border-top border-dark" style="font-size: 22px !important">
             Научишься выражать мысли легко и естественно, не задумываясь, без запинок и пауз
           </p>
         </div>
-        <div class="col-md-6 col-lg-4 py-md-4 pb-0" data-aos="fade-up" data-aos-delay="400">
+        <div class="col-md-6 col-lg-4 py-md-4 pb-0">
           <span class="h5 fw-lighter">02.</span>
           <p class="py-md-5 border-top border-dark" style="font-size: 22px !important">
             Сможешь уверенно использовать английский для своих целей: работа, отношения, переезд, обучение, путешествия, общение и так далее
           </p>
         </div>
-        <div class="col-md-6 col-lg-4 py-md-6 pb-0" data-aos="fade-up" data-aos-delay="600">
+        <div class="col-md-6 col-lg-4 py-md-6 pb-0">
           <span class="h5 fw-lighter">03.</span>
           <p class="py-md-5 border-top border-dark" style="font-size: 22px !important">
             Начнешь смело говорить в любой ситуации и с разными людьми, без страхов и комплексов
           </p>
         </div>
       </div>
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <div class="container">
         <div class="row d-flex justify-content-center">
           <br>
           <div class="col-12 col-xl-8 text-center">
@@ -340,7 +335,7 @@
     <div class="container py-vh-6">
       <div class="row d-flex justify-content-center">
         <div class="col-12 col-lg-10 col-xl-8 text-center">
-          <h1 data-aos="fade-down" style="color: #d557cc">
+          <h1 style="color: #d557cc">
             Участницы рекомендуют!
           </h1>
 <!--          <p class="lead">-->
@@ -350,7 +345,7 @@
         </div>
         <div class="col-12 mt-4">
           <div class="row row-cols-1 row-cols-md-2 g-5 d-flex align-items-center">
-            <div class="col-12 col-lg-6 col-xl-4" data-aos="fade-right">
+            <div class="col-12 col-lg-6 col-xl-4" >
               <div class="card p-4 shadow mt-3 border-0">
                 <div class="card-body">
                   <blockquote class="blockquote">
@@ -361,7 +356,7 @@
                     </p>
                   </blockquote>
                   <div class="d-flex border-top pt-3">
-                    <img src="img/persons/maria.jpg" width="48" height="48" class="rounded-circle" alt="" data-aos="fade">
+                    <img src="img/persons/maria.jpg" width="48" height="48" class="rounded-circle" alt="">
                     <p class="card-text px-4">
                       <span class="h6 fw-5">Мария</span><br>
                       <small class="text-muted">@mari.borele</small>
@@ -371,7 +366,7 @@
               </div>
             </div>
             <div class="col-12 col-lg-6 col-xl-4">
-              <div class="card p-4 shadow mt-3 border-0" data-aos="fade-down">
+              <div class="card p-4 shadow mt-3 border-0">
                 <div class="card-body">
                   <blockquote class="blockquote">
                     <p>
@@ -380,7 +375,7 @@
                     </p>
                   </blockquote>
                   <div class="d-flex border-top pt-3">
-                    <img src="img/persons/polina.jpg" width="48" height="48" class="rounded-circle" alt="" data-aos="fade">
+                    <img src="img/persons/polina.jpg" width="48" height="48" class="rounded-circle" alt="">
                     <p class="card-text px-4">
                       <span class="h6 fw-5">Полина</span><br>
                       <small class="text-muted">@Outsiider</small>
@@ -390,7 +385,7 @@
               </div>
             </div>
             <div class="col-12 col-lg-6 col-xl-4">
-              <div class="card p-4 shadow mt-3 border-0" data-aos="fade-left">
+              <div class="card p-4 shadow mt-3 border-0" >
                 <div class="card-body">
                   <blockquote class="blockquote">
                     <p>
@@ -400,7 +395,7 @@
                     </p>
                   </blockquote>
                   <div class="d-flex border-top pt-3">
-                    <img src="img/persons/olesya.jpg" width="48" height="48" class="rounded-circle" alt="" data-aos="fade">
+                    <img src="img/persons/olesya.jpg" width="48" height="48" class="rounded-circle" alt="">
                     <p class="card-text px-4">
                       <span class="h6 fw-5">Олеся</span><br>
                       <small class="text-muted">@olesya.troinova</small>
@@ -410,7 +405,7 @@
               </div>
             </div>
             <div class="col-12 col-lg-6 col-xl-4">
-              <div class="card p-4 shadow mt-3 border-0" data-aos="fade-right">
+              <div class="card p-4 shadow mt-3 border-0">
                 <div class="card-body">
                   <blockquote class="blockquote">
                     <p>
@@ -419,7 +414,7 @@
                     </p>
                   </blockquote>
                   <div class="d-flex border-top pt-3">
-                    <img src="img/persons/rita.jpg" width="48" height="48" class="rounded-circle" alt="" data-aos="fade">
+                    <img src="img/persons/rita.jpg" width="48" height="48" class="rounded-circle" alt="">
                     <p class="card-text px-4">
                       <span class="h6 fw-5">Маргарита</span><br>
                       <small class="text-muted">@riit.w</small>
@@ -429,7 +424,7 @@
               </div>
             </div>
             <div class="col-12 col-lg-6 col-xl-4">
-              <div class="card p-4 shadow mt-3 border-0" data-aos="fade-up">
+              <div class="card p-4 shadow mt-3 border-0">
                 <div class="card-body">
                   <blockquote class="blockquote">
                     <p>
@@ -439,7 +434,7 @@
                     </p>
                   </blockquote>
                   <div class="d-flex border-top pt-3">
-                    <img src="img/persons/alena.jpg" width="48" height="48" class="rounded-circle" alt="" data-aos="fade">
+                    <img src="img/persons/alena.jpg" width="48" height="48" class="rounded-circle" alt="">
                     <p class="card-text px-4">
                       <span class="h6 fw-5">Алёна</span><br>
                       <small class="text-muted">@jackwinslow</small>
@@ -449,7 +444,7 @@
               </div>
             </div>
             <div class="col-12 col-lg-6 col-xl-4">
-              <div class="card p-4 shadow mt-3 border-0" data-aos="fade-left">
+              <div class="card p-4 shadow mt-3 border-0">
                 <div class="card-body">
                   <blockquote class="blockquote">
                     <p>
@@ -457,7 +452,7 @@
                     </p>
                   </blockquote>
                   <div class="d-flex border-top pt-3">
-                    <img src="img/persons/yulya.jpg" width="48" height="48" class="rounded-circle" alt="" data-aos="fade">
+                    <img src="img/persons/yulya.jpg" width="48" height="48" class="rounded-circle" alt="">
                     <p class="card-text px-4">
                       <span class="h6 fw-5">Юлия</span><br>
                       <small class="text-muted">@fraerka310</small>
@@ -475,7 +470,7 @@
     <div class="row py-vh-4">
       <div class="row text-center gx-3 d-flex align-items-top">
         <div class="col mb-4">
-          <div class="card py-5 aos-init aos-animate shadow" data-aos="fade-right" data-aos-duration="1200" style="background-color: rgba(213,87,204,0.09)">
+          <div class="card py-5 aos-init aos-animate shadow" style="background-color: rgba(213,87,204,0.09)">
             <div class="card-body" >
               <h3 class="card-title">Пробная встреча</h3>
               <small>₽ </small><span class="display-5"><s>950</s></span>
@@ -483,6 +478,7 @@
               <div class="card-text mt-3">
                 <ul class="checked py-4 px-sm-2 px-lg-4 text-start list-unstyled">
                   <li class="py-2">Первая встреча со скидкой 60%</li>
+                  <li class="py-2">Доступна оплата в разных валютах</li>
                 </ul>
               </div>
               <a href="#" class="btn btn-primary px-5 py-3 shadow me-1 button-color" id="service1Button">Выбрать тариф</a>
@@ -490,7 +486,7 @@
           </div>
         </div>
         <div class="col mb-4">
-          <div class="card py-5 aos-init aos-animate shadow" data-aos="fade-up" data-aos-duration="1200" style="background-color: rgba(213,87,204,0.19)">
+          <div class="card py-5 aos-init aos-animate shadow" style="background-color: rgba(213,87,204,0.19)">
             <div class="card-body">
               <h3 class="card-title">Базовый тариф</h3>
               <small>₽ </small><span class="display-3 fw-bold">3 790</span><small>/мес</small><br>
@@ -500,6 +496,7 @@
                   <li class="py-2 border-bottom">Каждую неделю новая тема, 4 встречи в месяц</li>
                   <li class="py-2 border-bottom">90 минут практики, группы 2-4 человека</li>
                   <li class="py-2 border-bottom">Поболтать без заморочек</li>
+                  <li class="py-2 border-bottom">Доступна оплата в разных валютах</li>
                 </ul>
               </div>
               <a href="#" class="btn btn-primary px-5 py-3 shadow me-1 button-color" id="service2Button">Выбрать тариф</a>
@@ -507,7 +504,7 @@
           </div>
         </div>
         <div class="col mb-4">
-          <div class="card py-5 aos-init aos-animate shadow" data-aos="fade-left" data-aos-duration="1200" style="background-color: rgba(213,87,213,0.27)">
+          <div class="card py-5 aos-init aos-animate shadow" style="background-color: rgba(213,87,213,0.27)">
             <div class="card-body">
               <h3 class="card-title">Тариф с обратной связью</h3>
               <small>₽ </small><span class="display-3 fw-bold">6 790</span><small>/мес</small><br>
@@ -518,6 +515,7 @@
                   <li class="py-2 border-bottom">Индивидуальная обратная связь</li>
                   <li class="py-2 border-bottom">Таблица с разбором точек роста</li>
                   <li class="py-2 border-bottom">Для тех, кто хочет улучшить язык и поработать дополнительно</li>
+                  <li class="py-2 border-bottom">Доступна оплата в разных валютах</li>
                 </ul>
               </div>
               <a href="#" class="btn btn-primary px-5 py-3 shadow me-1 button-color" id="service3Button">Выбрать тариф</a>
@@ -541,7 +539,7 @@
               кроме как <span style="color: #d557cc">говорить</span>, не существует.
             </p>
             <p class="lead" style="font-weight: 300;">
-              Заполни форму, и я свяжусь с тобой
+              <u>Заполни форму, и я свяжусь с тобой в течение суток</u>
             </p>
           </div>
           <div class="col-lg-6 col-md-8 col-sm-12">
@@ -702,7 +700,7 @@
               setTimeout(() => {
                 button.disabled = false;
                 button.textContent = "Присоединиться!";
-              }, 3000);
+              }, 30000);
             });
 
     button.disabled = true;
